--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@egjs/flicking-plugins": "^3.3.0",
+    "@egjs/vue-flicking": "^3.7.2",
+    "@headlessui/vue": "^1.1.1",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/pwa": "^3.3.5",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "vue-scroll": "^2.1.13"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.0.1",
