--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   },
   "dependencies": {
     "@egjs/flicking-plugins": "^3.3.0",
-    "@egjs/vue-flicking": "^3.7.2",
-    "@headlessui/vue": "^1.1.1",
-    "@nuxtjs/axios": "^5.13.1",
+    "@egjs/vue-flicking": "^3.7.3",
+    "@headlessui/vue": "^1.3.0",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.24.5",
     "@nuxtjs/pwa": "^3.3.5",
-    "@tailwindcss/line-clamp": "^0.2.0",
-    "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
+    "@tailwindcss/line-clamp": "^0.2.1",
+    "core-js": "^3.15.1",
+    "nuxt": "^2.15.7",
     "vue-scroll": "^2.1.13"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^4.0.1",
-    "@vue/test-utils": "^1.1.3",
+    "@nuxtjs/tailwindcss": "^4.2.0",
+    "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
-    "eslint-config-prettier": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
-    "postcss": "^8.2.8",
-    "prettier": "^2.2.1",
+    "postcss": "^8.3.5",
+    "prettier": "^2.3.2",
     "vue-jest": "^3.0.4"
   }
 }
