--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "vue-scroll": "^2.1.13"
   },
   "devDependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/tailwindcss": "^4.2.0",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
