--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@tailwindcss/line-clamp": "^0.2.1",
     "core-js": "^3.15.1",
+    "meilisearch": "^0.19.0",
     "nuxt": "^2.15.7",
     "vue-scroll": "^2.1.13"
   },
