--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@egjs/flicking-plugins": "^3.3.0",
     "@egjs/vue-flicking": "^3.7.3",
     "@headlessui/vue": "^1.3.0",
+    "@nuxtjs/amp": "^0.5.4",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/composition-api": "^0.24.5",
     "@nuxtjs/pwa": "^3.3.5",
@@ -23,6 +24,7 @@
     "vue-scroll": "^2.1.13"
   },
   "devDependencies": {
+    "@nuxtjs/device": "^2.1.0",
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/tailwindcss": "^4.2.0",
